Fixed form spacing and background image browser issues.

--- a/css/app.css
+++ b/css/app.css
@@ -3,9 +3,6 @@
 h2 {
   line-height: 28px;
 }
-.col-md-6 {
-  margin-bottom: 30px;
-}
 .why-classup-icon,
 .how-it-works-icon,
 .awards-affiliates-icon {
@@ -31,9 +28,13 @@ h2 {
 /* Home Section
 ============================================*/
 #tf-home {
-  background: url("../img/home/background.jpg");
+  background: url("../img/home/background.png");
   background-repeat: no-repeat;
+  background-attachment: fixed;
   background-size: cover;
+  -o-background-size: cover;
+  -moz-background-size: cover;
+  -webkit-background-size: cover;
 }
 #tf-home .content {
   padding: 150px 0 50px;
@@ -77,9 +78,12 @@ button.sign-up-top {
   color: #FFFFFF;
   background: url("../img/how-it-works/background.png");
   background-repeat: no-repeat;
-  background-size: cover;
   background-position: center;
   background-attachment: fixed;
+  background-size: cover;
+  -o-background-size: cover;
+  -moz-background-size: cover;
+  -webkit-background-size: cover;
 }
 .instructions {
   padding: 0 20px;
@@ -88,6 +92,9 @@ button.sign-up-top {
 }
 .how-does-it-work-sign-up {
   margin-bottom: 50px;
+}
+.col-md-6 .how-it-works-containers{
+  margin-bottom: 30px;
 }
 
 
